# sophons

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
docs/: docs.json  index.md  sophon_agents_architecture.md
docs/agents/: index.md
docs/images/: sophon_agent.excalidraw
docs/tools/: index.md
scripts/: docs_server.py
src/sophons/: __init__.py  cli.py  errors.py
src/sophons/agents/: __init__.py  agent.py  conversation.py  hooks.py  loop.py  responses.py  retry.py  session.py  state.py
src/sophons/documents/: __init__.py  base.py
src/sophons/embeddings/: __init__.py
src/sophons/evals/: __init__.py  base.py  context_relevance.py  datasets.py  faithfulness.py  goal.py  judges.py  output.py  reports.py  runner.py  tool_parameters.py  trajectory.py
src/sophons/guardrails/: __init__.py  approval.py  base.py  chain.py  patterns.py  tools.py
src/sophons/loaders/: __init__.py  base.py  directory.py  docx.py  file.py  pdf.py  text.py  web.py
src/sophons/memory/: __init__.py  manager.py  reflection.py
src/sophons/models/: __init__.py  chat.py  embeddings.py  messages.py
src/sophons/observability/: __init__.py  _semconv.py  base.py  telemetry.py  tracer.py
src/sophons/rag/: __init__.py  pipeline.py
src/sophons/retrieval/: __init__.py  base.py  bm25.py  hybrid.py  multi_query.py  semantic.py
src/sophons/splitters/: __init__.py  base.py  html.py  markdown.py  recursive.py
src/sophons/storage/: __init__.py  documents.py
src/sophons/stores/: __init__.py
src/sophons/tools/: __init__.py  agent.py  (+3 more)
tests/: test_agent_tool_decorator_integration.py  test_bm25_retriever.py  test_cli.py  test_cross_encoder_reranker.py  test_directory_loader.py  test_document.py  test_docx_loader.py  test_errors.py  test_evals_context_relevance.py  test_evals_runner.py  test_evals_tool_parameters.py  test_evals_trajectory.py  test_file_loader.py  test_guardrails.py  test_guardrails_approval.py  test_html_splitter.py  test_hybrid_retriever.py  test_in_memory_document_store.py  test_integrations_package.py  test_loader_base.py  test_markdown_splitter.py  test_message.py  test_model_protocols.py  test_observability.py  test_pdf_loader.py  test_recursive_splitter.py  test_retriever_base.py  test_splitter_base.py  test_text_loader.py  test_tool_base.py  test_tool_decorator.py  test_web_loader.py
(+54 files in other folders)
