[project]
name = "sophons"
version = "0.1.0"
description = "Agent memory and retrieval SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=4"]
openai = ["openai>=1.0", "pydantic>=2.0"]
anthropic = ["anthropic>=0.40", "pydantic>=2.0"]
all = ["openai>=1.0", "anthropic>=0.40", "pydantic>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
